[tool.poetry]
name = "records"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pymongo = "^3.11.3"
dnspython = "^2.1.0"
flask = "^1.1.2"
google-trans-new = "^1.1.9"
discord-pretty-help = "^1.3.0"
yfinance = "^0.1.59"
PyNaCl = "^1.4.0"
DiscordUtils = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
