[tool.poetry]
name = "records"
version = "0.1.0"
description = ""
authors = ["Sq"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^21.24"
pymongo = "^3.11.3"
dnspython = "^2.1.0"
discord-pretty-help = "^1.3.0"
PyNaCl = "^1.4.0"
DiscordUtils = "^1.3.2"
python-dateutil = "^2.8.1"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
googletrans = "^3.0.0"
pytz = "^2021.3"
timezonefinder = "^5.2.0"
geopy = "^2.2.0"
"google-translate.py" = "^1.0.0"
flask = "^1.1.2"
markupsafe = "2.0.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
